--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <!-- endinject -->
 </head>
 <body>
+<div style="width: 210px;">
     <ng-datetime></ng-datetime>
+</div>
 
     <!-- inject:js -->
     <!-- endinject -->
