--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                ng-model="$ctrl.data.date"
                ng-datetime
                show-type="datetime"
-               format="YYYY/MM/DD HH:mm:ss"/>
+               format="YYYY/MM/DD HH:mm"/>
 
         <input type="text"
                ng-model="$ctrl.data.date2"
@@ -34,7 +34,7 @@
                ng-model="$ctrl.data.date3"
                ng-datetime
                show-type="time"
-               format="YYYY-MM-DD"/>
+               format="HH:mm"/>
     </div>
 </div>
 
