--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,14 @@
         <input type="text"
                ng-model="$ctrl.data.date2"
                ng-datetime
+               min-date="2016-11-10"
                show-type="date"
                format="YYYY/MM/DD"/>
 
         <input type="text"
                ng-model="$ctrl.data.date3"
                ng-datetime
+               min-date="2016-11-10"
                show-type="time"
                format="HH:mm"/>
     </div>
